// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmationModal should be rendered correctly 1`] = `
<div
  className="container modalBlocker shadow-dark"
  style={
    Object {
      "zIndex": 15,
    }
  }
>
  <div
    className="uui-modal-blocker"
    onClick={[Function]}
  />
  <div
    className="uui-modal-window modal width-420 height-auto container"
  >
    <div
      className="root size-36 background-white padding-24 vPadding-12 border-bottom-night400 spacing-6 modalHeader container align-items-center"
    >
      <div
        className="text font-sans-semibold color-night700 line-height-24 font-size-18 v-padding-12 container"
      >
        Title
      </div>
      <div
        className="flexSpacer"
      />
      <div
        className="flexCell"
        onClick={[Function]}
        style={
          Object {
            "alignSelf": undefined,
            "flexBasis": "auto",
            "flexGrow": undefined,
            "flexShrink": 0,
            "minWidth": 0,
            "textAlign": undefined,
          }
        }
      >
        <div
          className="root color-night600 uui-button-box uui-enabled -clickable"
          href={null}
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <div
            className="container uui-icon uui-enabled"
          >
            <svg
              className=""
              height={24}
              viewBox="0 0 12 24"
              width={12}
            >
              <use
                xlinkHref="#navigation-close-24.svg"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="os-host"
      cx={
        Array [
          Array [
            "root",
            "theme-light",
          ],
          undefined,
        ]
      }
    >
      <div
        className="os-resize-observer-host"
      />
      <div
        className="os-padding"
      >
        <div
          className="os-viewport"
        >
          <div
            className="os-content"
          />
        </div>
      </div>
      <div
        className="os-scrollbar os-scrollbar-horizontal "
      >
        <div
          className="os-scrollbar-track"
        >
          <div
            className="os-scrollbar-handle"
          />
        </div>
      </div>
      <div
        className="os-scrollbar os-scrollbar-vertical"
      >
        <div
          className="os-scrollbar-track"
        >
          <div
            className="os-scrollbar-handle"
          />
        </div>
      </div>
      <div
        className="os-scrollbar-corner"
      />
    </div>
    <div
      className="root size-36 background-white padding-24 vPadding-24 spacing-12 modalFooter borderTop container align-items-center"
    >
      <div
        className="flexSpacer"
      />
      <div
        className="container uui-button-box uui-enabled -clickable root size-36 color-night400 fill-solid style-square"
        href={null}
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <div
          className="uui-caption line-height-18 font-size-14 v-padding-8"
        >
          Discard
        </div>
      </div>
      <div
        className="container uui-button-box uui-enabled -clickable root size-36 color-grass fill-solid style-square"
        href={null}
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <div
          className="uui-caption line-height-18 font-size-14 v-padding-8"
        >
          Save
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConfirmationModal should be rendered correctly with extra props 1`] = `
<div
  className="container modalBlocker shadow-dark"
  style={
    Object {
      "zIndex": 15,
    }
  }
>
  <div
    className="uui-modal-blocker"
    onClick={[Function]}
  />
  <div
    className="uui-modal-window modal width-900 height-auto container"
  >
    <div
      className="root size-36 background-white padding-24 vPadding-12 border-bottom-night400 spacing-6 modalHeader container align-items-center"
    >
      <div
        className="text font-sans-semibold color-night700 line-height-24 font-size-18 v-padding-12 container"
      >
        Title
      </div>
      <div
        className="flexSpacer"
      />
      <div
        className="flexCell"
        onClick={[Function]}
        style={
          Object {
            "alignSelf": undefined,
            "flexBasis": "auto",
            "flexGrow": undefined,
            "flexShrink": 0,
            "minWidth": 0,
            "textAlign": undefined,
          }
        }
      >
        <div
          className="root color-night600 uui-button-box uui-enabled -clickable"
          href={null}
          onClick={[Function]}
          onKeyDown={[Function]}
          tabIndex={0}
        >
          <div
            className="container uui-icon uui-enabled"
          >
            <svg
              className=""
              height={24}
              viewBox="0 0 12 24"
              width={12}
            >
              <use
                xlinkHref="#navigation-close-24.svg"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="os-host"
      cx={
        Array [
          Array [
            "root",
            "theme-light",
          ],
          undefined,
        ]
      }
    >
      <div
        className="os-resize-observer-host"
      />
      <div
        className="os-padding"
      >
        <div
          className="os-viewport"
        >
          <div
            className="os-content"
          >
            <div
              className="root margin-24 container"
            >
              <div>
                content
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="os-scrollbar os-scrollbar-horizontal "
      >
        <div
          className="os-scrollbar-track"
        >
          <div
            className="os-scrollbar-handle"
          />
        </div>
      </div>
      <div
        className="os-scrollbar os-scrollbar-vertical"
      >
        <div
          className="os-scrollbar-track"
        >
          <div
            className="os-scrollbar-handle"
          />
        </div>
      </div>
      <div
        className="os-scrollbar-corner"
      />
    </div>
    <div
      className="root size-36 background-white padding-24 vPadding-24 spacing-12 modalFooter borderTop container align-items-center"
    >
      <div
        className="flexSpacer"
      />
      <div
        className="container uui-button-box uui-enabled -clickable root size-36 color-grass fill-solid style-square"
        href={null}
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <div
          className="uui-caption line-height-18 font-size-14 v-padding-8"
        >
          Save
        </div>
      </div>
    </div>
  </div>
</div>
`;
